# framework

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
Core/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  EventBus.cpp  EventBus.h  HostAppAdapter.cpp  HostAppAdapter.h  PluginManager.cpp  PluginManager.h  PluginRegistry.cpp  PluginRegistry.h  PluginScanner.cpp  PluginScanner.h
HostApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PluginManagerDialog.cpp  PluginManagerDialog.h  main.cpp
PluginSDK/: CMakeLists.txt
PluginSDK/include/: IEventHandler.h  IHost.h  IPlugin.h  IPluginService.h  PluginTypes.h
Plugins/: CMakeLists.txt
Plugins/CounterPlugin/: CMakeLists.txt  CounterPlugin.cpp  CounterPlugin.h  plugin.json
Plugins/SamplePlugin/: CMakeLists.txt  SamplePlugin.cpp  SamplePlugin.h  plugin.json
cmake/: FrameworkConfig.h.in
docs/superpowers/plans/: 2026-04-21-plugin-framework-phase1-core.md  2026-04-21-plugin-framework-phase2-hostapp.md  2026-04-21-plugin-framework-phase3-plugins.md
docs/superpowers/specs/: 2026-04-21-plugin-framework-design.md
